Added test for automatic dumps.